--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body {
 </head>
 <body>
   <div class="card">
-    <img src="./images/image-qr-code.png" alt="QR code"/>
+    <img src="./image-qr-code.png" alt="QR code"/>
     <div class="card-body">
       <h1>Improve your front-end skills by building projects</h1><p>Scan the QR code to visit Frontend Mentor and take your coding skills
         to the next level</p>
